syntax = "proto3";

option go_package = "/pb";

service GreetingService {
    rpc Greeting(GreetingServiceRequest) returns (GreetingServiceReply) {}
}

service DataNodeService{
    rpc Storage(DataNodeServiceStorage) returns (GreetingServiceReply) {}
}

service DataService {
    rpc GetData (DataRequest) returns (DataResponse);
}

message GreetingServiceRequest {
    string nombre = 1;
    string apellido = 2;
    bool EstaMuerto = 3;
}

message GreetingServiceReply {
    string message = 4;
}

message DataNodeServiceStorage {
    string id = 5;
    string nombre = 6;
    string apellido = 7;
}

message DataResponse {
    repeated string data = 8;
}

message DataRequest{
    string data = 9;
}